C#/SolarLunarName/SolarLunarName.Fable/src/scss/main.scss
$fa-font-path: "~@fortawesome/fontawesome-free/webfonts/";

@import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
@import "~@fortawesome/fontawesome-free/scss/solid.scss";
@import "~@fortawesome/fontawesome-free/scss/regular.scss";
@import "~@fortawesome/fontawesome-free/scss/brands.scss";

$yellow: #ff9c01;
$family-primary: 'Montserrat', sans-serif;
@import '~bulma/bulma.sass';

@import "~bulma-calendar/calendar.sass";



h1, h2, h3, h4, h5, h6 {
    font-family: 'Monoton', cursive;
    &.title{
        font-weight: normal;
    }
}

body {
    background-image: url(/assets/background.jpg);
    background-size: cover;
    height: 100vh;
    width: 100vw;
    overflow:hidden;
}
.circle-container{
    position: fixed;
    display: flex;
    width: 100%;
    height: 100%;
	justify-content: center;
	align-items: center;
	top:0;
	left:0;
	background: radial-gradient(circle, rgba(0,0,0,.1) 60%, rgb(0, 0, 0) );
}
.circle{
    transform: rotate(20deg);
    top: 40vh;
    display: flex;
}
.semi-circle{
    width: 80vh;
    height: 160vh;
}  
.semi-circle.dark {
    border-top-left-radius: 80vh;
    border-bottom-left-radius: 80vh;
	background: linear-gradient( to right, rgb(0, 0, 0), rgba(4, 4, 4,.1) );
}
.semi-circle.light {
    border-top-right-radius: 80vh;
    border-bottom-right-radius: 80vh;
    background: linear-gradient( to right, rgba(255, 156, 1, 0.1), rgba(238, 217, 47, .7 ));
}

.panel-block{

    background-color: white;
    justify-content: center;

}

.gregorian .panel-heading{

    background-color: $yellow;

}
.lunisolar .panel-heading{
    color: white;
    background-color: $dark;

}
.result .panel-heading{
    color: white;
    background-color: $red;

}

.button, dt {
    background-color: $grey-light ;
}
dd {
    margin-bottom: 1em;
}

dd, dt {
    border: 1px solid $grey-light;
    padding: 2px 5px;
}

